--- a/03/quiz-1.html
+++ b/03/quiz-1.html
@@ -7,6 +7,9 @@
 	<title>웹 브라우저 창에 표시하기</title>
 </head>
 <body>	
-
+	<script>
+		let lang = prompt("내용을 입력하세요~");
+		document.write(lang);
+	</script>
 </body>
 </html>
