--- a/08/showBig.html
+++ b/08/showBig.html
@@ -6,11 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>DOM</title>
 	<link rel="stylesheet" href="css/product.css">
+	<script src="js/showBig-result.js"></script>
 </head>
 <body>
 	<div id="container">
-			<h1 id="heading">에디오피아 게뎁</h1>
-			<div id="prod-pic">
+		<h1 id="heading">에디오피아 게뎁</h1>
+		<div id="prod-pic">
 				<img src="images/coffee-pink.jpg" alt="에디오피아 게뎁" id="cup" width="200" height="200">
 				<div id="small-pic">
 					<img src="images/coffee-pink.jpg" class="small">
