--- a/07/index.html
+++ b/07/index.html
@@ -4,10 +4,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>To do list</title>
+	<link rel="stylesheet" href="css/input.css">
+	<script src="js/checklist.js"></script>
 </head>
 <body>
 	<div id="wrapper">
-		
+		<h2>여행 준비물 점검 목록</h2>
+		<form>
+			<input type="text" id="item" autofocus="true">
+			<button type="button" id="add" class="addBtn">➕</button>
+		</form>
+		<div id="itemList"></div>
 	</div>    
 </body>
 </html>
